--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
     <div id="file-list"></div>
     <input type="file" id="file-input" />
     <button id="upload-btn">Upload</button>
-    <script src="app.js"></script>
+
+    <script>
+        document.getElementById('upload-btn').addEventListener('click', async () => {
+            const fileInput = document.getElementById('file-input');
+            const file = fileInput.files[0];
+
+            if (!file) {
+                alert("Please select a file to upload.");
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append('image', file);
+
+            try {
+                const response = await fetch('/images', {
+                    method: 'POST',
+                    body: formData
+                });
+
+                if (response.ok) {
+                    const result = await response.text();
+                    alert(result);
+                } else {
+                    alert("Failed to upload the file.");
+                }
+            } catch (error) {
+                console.error("Error uploading file:", error);
+                alert("An error occurred while uploading the file.");
+            }
+        });
+    </script>
 </body>
 
 </html>
