--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <h1>Welcome to the S3 Web App</h1>
 
     <!-- Display uploaded images -->
-    <div id="file-list"></div>
+    <div id="file-list" style="display: flex; flex-wrap: wrap;"></div>
 
-    <!-- File input and upload button -->
-    <input type="file" id="file-input" accept="image/*" />
-    <button id="upload-btn">Upload</button>
+    <!-- File input and upload button in a form -->
+    <form id="upload-form">
+        <input type="file" id="file-input" accept="image/*" />
+        <button type="submit" id="upload-btn">Upload</button>
+    </form>
 
-    <div id="message" style="margin-top: 20px;"></div>
+    <!-- Message display for success or error feedback -->
+    <div id="message" style="margin-top: 20px; color: red;"></div>
 
     <script>
-        const BUCKET_NAME = 'cccf-s3-web-app-bucket'; // Replace with your actual bucket name
+        const BUCKET_NAME = 'cccf-s3-web-app'; // Your actual bucket name
 
         // Function to display messages to the user
         function displayMessage(message, isError = false) {
@@ -38,17 +41,20 @@
                 const fileListDiv = document.getElementById('file-list');
                 fileListDiv.innerHTML = '';
 
-                // Display each image from the S3 images folder
-                images.Contents.forEach(image => {
-                    if (image.Key.startsWith('images/')) { // Adjust folder name as needed
-                        const img = document.createElement('img');
-                        img.src = `https://${BUCKET_NAME}.s3.amazonaws.com/${image.Key}`;
-                        img.alt = image.Key;
-                        img.style.width = '200px';
-                        img.style.margin = '10px';
-                        fileListDiv.appendChild(img);
-                    }
-                });
+                if (images && Array.isArray(images.Contents) && images.Contents.length > 0) {
+                    images.Contents.forEach(image => {
+                        if (image.Key.startsWith('images/')) { // Ensure folder path matches your S3 structure
+                            const img = document.createElement('img');
+                            img.src = `https://${BUCKET_NAME}.s3.amazonaws.com/${image.Key}`;
+                            img.alt = image.Key;
+                            img.style.width = '200px';
+                            img.style.margin = '10px';
+                            fileListDiv.appendChild(img);
+                        }
+                    });
+                } else {
+                    displayMessage("No images found in the bucket.", true);
+                }
             } catch (error) {
                 console.error("Error loading images:", error);
                 displayMessage("Failed to load images.", true);
@@ -58,8 +64,10 @@
         // Load images on page load
         document.addEventListener('DOMContentLoaded', loadImages);
 
-        // Handle file upload
-        document.getElementById('upload-btn').addEventListener('click', async () => {
+        // Handle file upload on form submission
+        document.getElementById('upload-form').addEventListener('submit', async (event) => {
+            event.preventDefault(); // Prevent the form from submitting the traditional way
+
             const fileInput = document.getElementById('file-input');
             const file = fileInput.files[0];
 
@@ -72,7 +80,7 @@
             formData.append('image', file);
 
             try {
-                const response = await fetch('/images', { // Adjust URL as needed for your server
+                const response = await fetch('/images', {
                     method: 'POST',
                     body: formData
                 });
