image logging on server

--- a/index.html
+++ b/index.html
@@ -31,27 +31,34 @@
         // Function to fetch and display images from the S3 bucket
         async function loadImages() {
             try {
-                const response = await fetch('/images');
-                const images = await response.json();
-                const fileListDiv = document.getElementById('file-list');
-                fileListDiv.innerHTML = '';
+                const response = await fetch('/images'); // Fetch images from the server
+                const images = await response.json(); // Parse the JSON response
 
-                // Display each image from the S3 Images folder
-                images.Contents.forEach(image => {
-                    if (image.Key.startsWith('Images/')) {
+                console.log("Images response:", images); // Log the full response for debugging
+
+                const fileListDiv = document.getElementById('file-list');
+                fileListDiv.innerHTML = ''; // Clear the previous images
+
+                // Check if Contents is defined and is an array
+                if (images.Contents && Array.isArray(images.Contents)) {
+                    images.Contents.forEach(image => {
                         const img = document.createElement('img');
-                        img.src = `https://${process.env.BUCKET_NAME}.s3.amazonaws.com/${image.Key}`;
+                        img.src = `https://cccf-s3-web-app.s3.amazonaws.com/${image.Key}`;
                         img.alt = image.Key;
                         img.style.width = '200px';
                         img.style.margin = '10px';
                         fileListDiv.appendChild(img);
-                    }
-                });
+                    });
+                } else {
+                    console.error("No images found or invalid response structure.");
+                    displayMessage("No images found.", true); // Inform the user
+                }
             } catch (error) {
                 console.error("Error loading images:", error);
                 displayMessage("Failed to load images.", true);
             }
         }
+
 
         // Load images on page load
         document.addEventListener('DOMContentLoaded', loadImages);
