--- a/index.html
+++ b/index.html
@@ -4,97 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Upload</title>
     <link rel="stylesheet" href="styles.css">
-    <title>S3 Web App</title>
 </head>
 
 <body>
-    <h1>Welcome to the S3 Web App</h1>
+    <h1>Upload Image</h1>
+    <form id="upload-form" enctype="multipart/form-data" method="POST">
+        <input type="file" name="image" required>
+        <button type="submit">Upload</button>
+    </form>
 
-    <!-- Display uploaded images -->
-    <div id="file-list"></div>
-
-    <!-- File input and upload button -->
-    <input type="file" id="file-input" accept="image/*" />
-    <button id="upload-btn">Upload</button>
-
-    <div id="message" style="margin-top: 20px;"></div>
+    <h2>Uploaded Images</h2>
+    <div id="image-list"></div>
 
     <script>
-        // Function to display messages to the user
-        function displayMessage(message, isError = false) {
-            const messageDiv = document.getElementById('message');
-            messageDiv.textContent = message;
-            messageDiv.style.color = isError ? 'red' : 'green';
-        }
+        document.getElementById('upload-form').onsubmit = async (e) => {
+            e.preventDefault();
+            const formData = new FormData(e.target);
+            const response = await fetch('/images', {
+                method: 'POST',
+                body: formData,
+            });
+            const result = await response.text();
+            alert(result);
+            loadImages();
+        };
 
-        // Function to fetch and display images from the S3 bucket
         async function loadImages() {
-            try {
-                const response = await fetch('/images');
-                const images = await response.json();
+            const response = await fetch('/images');
+            const images = await response.json();
+            const imageList = document.getElementById('image-list');
+            imageList.innerHTML = '';
 
-                // Log the images response to check its structure
-                console.log("Images response:", images);
-
-                const fileListDiv = document.getElementById('file-list');
-                fileListDiv.innerHTML = '';
-
-                // Check if the images object has Contents and if it's an array
-                if (images.Contents && Array.isArray(images.Contents)) {
-                    images.Contents.forEach(image => {
-                        if (image.Key.startsWith('s3-web-app/images/')) {
-                            const img = document.createElement('img');
-                            img.src = `https://cccf-s3-web-app.s3.amazonaws.com/${image.Key}`;
-                            img.alt = image.Key;
-                            img.style.width = '200px';
-                            img.style.margin = '10px';
-                            fileListDiv.appendChild(img);
-                        }
-                    });
-                } else {
-                    displayMessage("No images found or invalid response structure.", true);
-                }
-            } catch (error) {
-                console.error("Error loading images:", error);
-                displayMessage("Failed to load images.", true);
+            if (images.length > 0) {
+                images.forEach((imageKey) => {
+                    const imageUrl = `https://cccf-s3-web-app-bucket.s3.amazonaws.com/${imageKey}`;
+                    const imgElement = document.createElement('img');
+                    imgElement.src = imageUrl;
+                    imgElement.alt = imageKey;
+                    imgElement.style.width = '100px'; // Adjust size as needed
+                    imageList.appendChild(imgElement);
+                });
+            } else {
+                imageList.innerHTML = '<p>No images found.</p>';
             }
         }
 
         // Load images on page load
-        document.addEventListener('DOMContentLoaded', loadImages);
-
-        // Handle file upload
-        document.getElementById('upload-btn').addEventListener('click', async () => {
-            const fileInput = document.getElementById('file-input');
-            const file = fileInput.files[0];
-
-            if (!file) {
-                displayMessage("Please select a file to upload.", true);
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append('image', file);
-
-            try {
-                const response = await fetch('/images', {
-                    method: 'POST',
-                    body: formData
-                });
-                if (response.ok) {
-                    const result = await response.text();
-                    displayMessage(result);
-                    loadImages(); // Reload images after successful upload
-                } else {
-                    const errorText = await response.text();
-                    displayMessage(`Failed to upload the file: ${errorText}`, true);
-                }
-            } catch (error) {
-                console.error("Error uploading file:", error);
-                displayMessage("An error occurred while uploading the file.", true);
-            }
-        });
+        loadImages();
     </script>
 </body>
 
