--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             }
         }
 
+        // Load images when the page is loaded
+        window.onload = loadImages;
     </script>
 </body>
 
